@@ -1,3 +1,5 @@
+2005/9/30 -- released version 20050930_trunk
+
 2005/9/29 -- released version 20050929_trunk
 
 * make having an older version of CGI::Carp a non-fatal error and
